實作主管列表

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
@@ -53,117 +53,117 @@ else
                         </div>
                         <!-- is-active: 作用中的項目 -->
                         <div class="c-tab__panel is-active" data-tab-panel-id="tab-status-1">
-                        <div class="l-table">
-                            <table class="c-table@dt-only c-cardTable@lt c-cardTable--zebra">
-                                <colgroup>
-                                    <col style="width: 1%;">
-                                    <col style="width: 2%;">
-                                    <col style="width: 3%;">
-                                    <col style="width: 3%;">
-                                    <col style="width: 2%;">
-                                    <col style="width: 1%;">
-                                    <col style="width: 1%;">
-                                </colgroup>
-                                <thead>
-                                    <tr class="u-nowrap">
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>即將到來</span>
-                                            </div>
-                                        </th>
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>預約日期</span>
-                                            </div>
-                                        </th>
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>預約時段</span>
-                                            </div>
-                                        </th>
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>電子信箱</span>
-                                            </div>
-                                        </th>
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>預約明細</span>
-                                            </div>
-                                        </th>
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>取消預約</span>
-                                            </div>
-                                        </th>
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>開始諮詢</span>
-                                            </div>
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody id="tbody1">
-                                </tbody>
-                            </table>
-                            <div class="l-pagination">
-                                <div class="l-pagination__size" id="uid-perPage-1">
-                                </div>
-                                <div class="l-pagination__switch" id="uid-pagination-1">
+                            <div class="l-table">
+                                <table class="c-table@dt-only c-cardTable@lt c-cardTable--zebra">
+                                    <colgroup>
+                                        <col style="width: 1%;">
+                                        <col style="width: 2%;">
+                                        <col style="width: 3%;">
+                                        <col style="width: 3%;">
+                                        <col style="width: 2%;">
+                                        <col style="width: 1%;">
+                                        <col style="width: 1%;">
+                                    </colgroup>
+                                    <thead>
+                                        <tr class="u-nowrap">
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>即將到來</span>
+                                                </div>
+                                            </th>
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>預約日期</span>
+                                                </div>
+                                            </th>
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>預約時段</span>
+                                                </div>
+                                            </th>
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>預約客戶</span>
+                                                </div>
+                                            </th>
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>連絡電話</span>
+                                                </div>
+                                            </th>
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>預約明細</span>
+                                                </div>
+                                            </th>
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>開始諮詢</span>
+                                                </div>
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="tbody1">
+                                    </tbody>
+                                </table>
+                                <div class="l-pagination">
+                                    <div class="l-pagination__size" id="uid-perPage-1">
+                                    </div>
+                                    <div class="l-pagination__switch" id="uid-pagination-1">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                         <div class="c-tab__panel" data-tab-panel-id="tab-status-3">
-                        <div class="l-table">
-                            <table class="c-table@dt-only c-cardTable@lt c-cardTable--zebra">
-                                <colgroup>
-                                    <col style="width: 1%;">
-                                    <col style="width: 1%;">
-                                    <col style="width: 2%;">
-                                    <col style="width: 1%;">
-                                    <col style="width: 1%;">
-                                </colgroup>
-                                <thead>
-                                    <tr class="u-nowrap">
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>預約日期</span>
-                                            </div>
-                                        </th>
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>預約時段</span>
-                                            </div>
-                                        </th>
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>電子信箱</span>
-                                            </div>
-                                        </th>
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>預約狀態</span>
-                                            </div>
-                                        </th>
-                                        <th>
-                                            <div class="c-table__title">
-                                                <span>預約明細</span>
-                                            </div>
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody id="tbody2">
-                                </tbody>
-                            </table>
-                            <div class="l-pagination">
-                                <div class="l-pagination__size" id="uid-perPage-2">
-                                </div>
-                                <div class="l-pagination__switch" id="uid-pagination-2">
+                            <div class="l-table">
+                                <table class="c-table@dt-only c-cardTable@lt c-cardTable--zebra">
+                                    <colgroup>
+                                        <col style="width: 1%;">
+                                        <col style="width: 1%;">
+                                        <col style="width: 2%;">
+                                        <col style="width: 1%;">
+                                        <col style="width: 1%;">
+                                    </colgroup>
+                                    <thead>
+                                        <tr class="u-nowrap">
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>預約日期</span>
+                                                </div>
+                                            </th>
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>預約時段</span>
+                                                </div>
+                                            </th>
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>電子信箱</span>
+                                                </div>
+                                            </th>
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>預約狀態</span>
+                                                </div>
+                                            </th>
+                                            <th>
+                                                <div class="c-table__title">
+                                                    <span>預約明細</span>
+                                                </div>
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="tbody2">
+                                    </tbody>
+                                </table>
+                                <div class="l-pagination">
+                                    <div class="l-pagination__size" id="uid-perPage-2">
+                                    </div>
+                                    <div class="l-pagination__switch" id="uid-pagination-2">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                     </div>
                 </div>
                 <div class="c-tab__panel" data-tab-panel-id="tab-icon-2">
@@ -393,16 +393,7 @@ else
                 </div>
             </td>
             <td class="c-cardTable__space"></td>
-            <td class="c-cardTable__footer" data-card-table-width="1/2">
-                <div class="c-cardTable__content">
-                    <ul class="l-collect l-collect--divider@lt">
-                        <li class="l-collect__item">
-                            <a href="#popupCancel" class="o-statusBtn o-statusBtn--cancel" data-popup-name="popupCancel" data-after-lt="取消預約" data-msg="取消預約" data-ia="true" data-ia-toast="false" data-popup="true" data-id="<%= ScheduleID %>"></a>
-                        </li>
-                    </ul>
-                </div>
-            </td>
-            <td class="c-cardTable__footer" data-card-table-width="1/2">
+            <td class="c-cardTable__footer" data-card-table-width="1/1">
                 <div class="c-cardTable__content">
                     <% if (Start) { %>
                         <a href="@(Model.ConsultScheduleLink)?id=<%= ScheduleID %>&type=Employee" class="o-tableBtn o-tableBtn--card@lt o-tableBtn--consult">開始諮詢</a>
