--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -140,6 +140,13 @@
 																				<div class="o-btnCheckBox__text" data-filter-value="境外"></div>
 																			</label>
 																		</div>
+
+																		<div class="l-pickGroup__item" style="display:none;">
+																			<label class="o-btnCheckBox" data-filter-checkbox>
+																				<input class="o-btnCheckBox__input" type="checkbox" value="">
+																				<div class="o-btnCheckBox__text" data-filter-value=""></div>
+																			</label>
+																		</div>
 																	</div>
 																</div>
 																<div class="l-pickCollapse__expand">
@@ -185,16 +192,19 @@
 															<div class="l-pickCollapse" data-overflow-hide="fundType">
 																<div class="l-pickCollapse__content" data-overflow-content="fundType">
 																	<div class="l-pickGroup">
-																		@foreach (string type in Model.SearchBarData.FundTypeNames)
+																		@if (Model.SearchBarData.FundTypeNames != null)
 																		{
-																			if (!string.IsNullOrEmpty(type))
+																			foreach (string type in Model.SearchBarData.FundTypeNames)
 																			{
-																				<div class="l-pickGroup__item">
-																					<label class="o-btnCheckBox" data-filter-checkbox>
-																						<input class="o-btnCheckBox__input" type="checkbox" value="@type">
-																						<div class="o-btnCheckBox__text" data-filter-value="@type"></div>
-																					</label>
-																				</div>
+																				if (!string.IsNullOrEmpty(type))
+																				{
+																					<div class="l-pickGroup__item">
+																						<label class="o-btnCheckBox" data-filter-checkbox>
+																							<input class="o-btnCheckBox__input" type="checkbox" value="@type">
+																							<div class="o-btnCheckBox__text" data-filter-value="@type"></div>
+																						</label>
+																					</div>
+																				}
 																			}
 																		}
 
@@ -245,18 +255,27 @@
 															<div class="l-pickCollapse" data-overflow-hide="pricingCurrency">
 																<div class="l-pickCollapse__content" data-overflow-content="pricingCurrency">
 																	<div class="l-pickGroup">
-																		@foreach (string currency in Model.SearchBarData.Currencies)
+																		@if (Model.SearchBarData.Currencies != null)
 																		{
-																			if (!string.IsNullOrEmpty(currency))
+																			foreach (string currency in Model.SearchBarData.Currencies)
 																			{
-																				<div class="l-pickGroup__item">
-																					<label class="o-btnCheckBox" data-filter-checkbox>
-																						<input class="o-btnCheckBox__input" type="checkbox" value="@currency">
-																						<div class="o-btnCheckBox__text" data-filter-value="@currency"></div>
-																					</label>
-																				</div>
+																				if (!string.IsNullOrEmpty(currency))
+																				{
+																					<div class="l-pickGroup__item">
+																						<label class="o-btnCheckBox" data-filter-checkbox>
+																							<input class="o-btnCheckBox__input" type="checkbox" value="@currency">
+																							<div class="o-btnCheckBox__text" data-filter-value="@currency"></div>
+																						</label>
+																					</div>
+																				}
 																			}
 																		}
+																		<div class="l-pickGroup__item" style="display:none;">
+																			<label class="o-btnCheckBox" data-filter-checkbox>
+																				<input class="o-btnCheckBox__input" type="checkbox" value="">
+																				<div class="o-btnCheckBox__text" data-filter-value=""></div>
+																			</label>
+																		</div>
 																	</div>
 																</div>
 																<div class="l-pickCollapse__expand">
@@ -298,17 +317,19 @@
 															<div class="l-pickCollapse" data-overflow-hide="dividend">
 																<div class="l-pickCollapse__content" data-overflow-content="dividend">
 																	<div class="l-pickGroup">
-
-																		@foreach (string frequency in Model.SearchBarData.DividendDistributionFrequencies)
+																		@if (Model.SearchBarData.DividendDistributionFrequencies != null)
 																		{
-																			if (!string.IsNullOrEmpty(frequency))
+																			foreach (string frequency in Model.SearchBarData.DividendDistributionFrequencies)
 																			{
-																				<div class="l-pickGroup__item">
-																					<label class="o-btnCheckBox" data-filter-checkbox>
-																						<input class="o-btnCheckBox__input" type="checkbox" value="@frequency">
-																						<div class="o-btnCheckBox__text" data-filter-value="@frequency"></div>
-																					</label>
-																				</div>
+																				if (!string.IsNullOrEmpty(frequency))
+																				{
+																					<div class="l-pickGroup__item">
+																						<label class="o-btnCheckBox" data-filter-checkbox>
+																							<input class="o-btnCheckBox__input" type="checkbox" value="@frequency">
+																							<div class="o-btnCheckBox__text" data-filter-value="@frequency"></div>
+																						</label>
+																					</div>
+																				}
 																			}
 																		}
 
@@ -393,20 +414,21 @@
 																		<div class="l-pickCollapse" data-overflow-hide="target">
 																			<div class="l-pickCollapse__content" data-overflow-content="target">
 																				<div class="l-pickGroup">
-
-																					@foreach (string target in Model.SearchBarData.InvestmentTargets)
+																					@if (Model.SearchBarData.InvestmentTargets != null)
 																					{
-																						if (!string.IsNullOrEmpty(target))
+																						foreach (string target in Model.SearchBarData.InvestmentTargets)
 																						{
-																							<div class="l-pickGroup__item">
-																								<label class="o-btnCheckBox" data-filter-checkbox>
-																									<input class="o-btnCheckBox__input" type="checkbox" value="@target">
-																									<div class="o-btnCheckBox__text" data-filter-value="@target"></div>
-																								</label>
-																							</div>
+																							if (!string.IsNullOrEmpty(target))
+																							{
+																								<div class="l-pickGroup__item">
+																									<label class="o-btnCheckBox" data-filter-checkbox>
+																										<input class="o-btnCheckBox__input" type="checkbox" value="@target">
+																										<div class="o-btnCheckBox__text" data-filter-value="@target"></div>
+																									</label>
+																								</div>
+																							}
 																						}
 																					}
-
 																					<div class="l-pickGroup__item" style="display:none;">
 																						<label class="o-btnCheckBox" data-filter-checkbox>
 																							<input class="o-btnCheckBox__input" type="checkbox" value="">
@@ -455,20 +477,21 @@
 																		<div class="l-pickCollapse" data-overflow-hide="investArea">
 																			<div class="l-pickCollapse__content" data-overflow-content="investArea">
 																				<div class="l-pickGroup">
-
-																					@foreach (string region in Model.SearchBarData.InvestmentRegions)
+																					@if (Model.SearchBarData.InvestmentRegions != null)
 																					{
-																						if (!string.IsNullOrEmpty(region))
+																						foreach (string region in Model.SearchBarData.InvestmentRegions)
 																						{
-																							<div class="l-pickGroup__item">
-																								<label class="o-btnCheckBox" data-filter-checkbox>
-																									<input class="o-btnCheckBox__input" type="checkbox" value="@region">
-																									<div class="o-btnCheckBox__text" data-filter-value="@region"></div>
-																								</label>
-																							</div>
+																							if (!string.IsNullOrEmpty(region))
+																							{
+																								<div class="l-pickGroup__item">
+																									<label class="o-btnCheckBox" data-filter-checkbox>
+																										<input class="o-btnCheckBox__input" type="checkbox" value="@region">
+																										<div class="o-btnCheckBox__text" data-filter-value="@region"></div>
+																									</label>
+																								</div>
+																							}
 																						}
 																					}
-
 																					<div class="l-pickGroup__item" style="display:none;">
 																						<label class="o-btnCheckBox" data-filter-checkbox>
 																							<input class="o-btnCheckBox__input" type="checkbox" value="">
@@ -547,19 +570,21 @@
 																		<div class="l-pickCollapse" data-overflow-hide="company">
 																			<div class="l-pickCollapse__content" data-overflow-content="company">
 																				<div class="l-pickGroup">
-																					@foreach (string company in Model.SearchBarData.FundCompanies)
+																					@if (Model.SearchBarData.FundCompanies != null)
 																					{
-																						if (!string.IsNullOrEmpty(company))
+																						foreach (string company in Model.SearchBarData.FundCompanies)
 																						{
-																							<div class="l-pickGroup__item">
-																								<label class="o-btnCheckBox" data-filter-checkbox>
-																									<input class="o-btnCheckBox__input" type="checkbox" value="@company">
-																									<div class="o-btnCheckBox__text" data-filter-value="@company"></div>
-																								</label>
-																							</div>
+																							if (!string.IsNullOrEmpty(company))
+																							{
+																								<div class="l-pickGroup__item">
+																									<label class="o-btnCheckBox" data-filter-checkbox>
+																										<input class="o-btnCheckBox__input" type="checkbox" value="@company">
+																										<div class="o-btnCheckBox__text" data-filter-value="@company"></div>
+																									</label>
+																								</div>
+																							}
 																						}
 																					}
-
 																					<div class="l-pickGroup__item" style="display:none;">
 																						<label class="o-btnCheckBox" data-filter-checkbox>
 																							<input class="o-btnCheckBox__input" type="checkbox" value="">
@@ -1005,8 +1030,8 @@
 							<option value="基金名稱低至高" data-sorting-column="ProductCode" data-sorting-class="is-asc">基金名稱低至高</option>
 							<option value="最新淨值高至低" data-sorting-column="NetAssetValue" data-sorting-class="is-desc">最新淨值高至低</option>
 							<option value="最新淨值低至高" data-sorting-column="NetAssetValue" data-sorting-class="is-asc">最新淨值低至高</option>
-							<option value="幣別高至低" data-sorting-column="FundCurrency.Key" data-sorting-class="is-desc">幣別高至低</option>
-							<option value="幣別低至高" data-sorting-column="FundCurrency.Key" data-sorting-class="is-asc">幣別低至高</option>
+							<option value="幣別高至低" data-sorting-column="Currency.Key" data-sorting-class="is-desc">幣別高至低</option>
+							<option value="幣別低至高" data-sorting-column="Currency.Key" data-sorting-class="is-asc">幣別低至高</option>
 							<option value="漲跌幅高至低" data-sorting-column="PercentageChangeInFundPrice.Value" data-sorting-class="is-desc">漲跌幅高至低</option>
 							<option value="漲跌幅低至高" data-sorting-column="PercentageChangeInFundPrice.Value" data-sorting-class="is-asc">漲跌幅低至高</option>
 							<option value="基金規模原幣高至低" data-sorting-column="FundSizeMillionOriginalCurrency.Value" data-sorting-class="is-desc">基金規模原幣高至低</option>
@@ -1076,8 +1101,6 @@
 				<option value="1年台幣績效高至低" data-sorting-column="OneYearReturnTWD.Value" data-sorting-class="is-desc">1年台幣績效高至低</option>
 				<option value="1年台幣績效低至高" data-sorting-column="OneYearReturnTWD.Value" data-sorting-class="is-asc">1年台幣績效低至高</option>
 
-				<option value="幣別高至低" data-sorting-column="FundCurrency.Key" data-sorting-class="is-desc">幣別高至低</option>
-				<option value="幣別低至高" data-sorting-column="FundCurrency.Key" data-sorting-class="is-asc">幣別低至高</option>
 				<option value="漲跌幅高至低" data-sorting-column="PercentageChangeInFundPrice.Value" data-sorting-class="is-desc">漲跌幅高至低</option>
 				<option value="漲跌幅低至高" data-sorting-column="PercentageChangeInFundPrice.Value" data-sorting-class="is-asc">漲跌幅低至高</option>
 				<option value="基金規模原幣高至低" data-sorting-column="FundSizeMillionOriginalCurrency.Value" data-sorting-class="is-desc">基金規模原幣高至低</option>
@@ -1124,7 +1147,7 @@
 								<a href="#" class="o-sorting" data-sorting-column="NetAssetValue"></a>
 							</div>
 						</th>
-						<th data-filter-switch-columns="1,4,5">
+						<th data-filter-switch-columns="1,2,4,5">
 							<div class="c-table__title">
 								<span>幣別</span>
 								<a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
@@ -1181,14 +1204,6 @@
 							</div>
 						</th>
 						@*tab-2*@
-						<th data-filter-switch-columns="2">
-							<div class="c-table__title">
-								<span>幣別</span>
-								<a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
-								<a href="#" class="o-sorting" data-sorting-column="FundCurrency.Key"></a>
-							</div>
-
-						</th>
 						<th data-filter-switch-columns="2">
 							<div class="c-table__title">
 								<span>漲跌幅</span>
@@ -1549,8 +1564,8 @@
 								<a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
 							</div>
 							<div class="c-cardTable__content">
-								<% if (FundCurrency.Value!=null) { %>
-								<a href="#popupCurrencyWebSite" class="o-link" data-popup="true"><%= FundCurrency.Value %></a>
+								<% if (Currency.Value!=null) { %>
+								<a href="#popupCurrencyWebSite" class="o-link" data-popup="true"><%= Currency.Value %></a>
 								<% } else {%>
 								<span>-</span>
 								<% } %>
@@ -1948,13 +1963,13 @@
 					// 申購按鈕
 					let $purchase = suggestion.Data.Purchase ? `<div class="c-itemKeyword__actions"><a ${suggestion.Data.AutoSubscribeButtonHtml}>申購</a></div>` : '';
 					return `<div class="c-itemKeyword">
-														<a href="${detailUrl}" class="c-itemKeyword__content" target="_blank">
+																								<a href="${detailUrl}" class="c-itemKeyword__content" target="_blank">
 
-															<div class="c-itemKeyword__title">${$.Autocomplete.defaults.formatResult(suggestion, currentValue)}</div>
-														</a>
-														<div class="c-itemKeyword__collections">${$like}</div>
-														${$purchase}
-													</div>`;
+																									<div class="c-itemKeyword__title">${$.Autocomplete.defaults.formatResult(suggestion, currentValue)}</div>
+																								</a>
+																								<div class="c-itemKeyword__collections">${$like}</div>
+																								${$purchase}
+																							</div>`;
 				}
 			});
 		}
