刪除錯誤的location.origin

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultSchedule.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultSchedule.cshtml
@@ -49,7 +49,7 @@
             });
         }
         else {
-            location.href = new URL(location.origin + '@Model.ReturnLink');
+            location.href = new URL('@Model.ReturnLink');
         }
     });
 
