--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
@@ -596,6 +596,7 @@ else
 
                     var token = $('input[name="__RequestVerificationToken"]').val();
                     consultSchedule.__RequestVerificationToken = token;
+                    consultSchedule.pageUrl = window.location.pathname + window.location.search;
 
                     $.ajax({
                         url: '@ClientRoute.GenerateUrl(this, "Consult", "CancelConsultSchedule")',
@@ -603,7 +604,7 @@ else
                         data: consultSchedule
                     }).done(function (data, textStatus, jqXHR) {
                         $.magnificPopup.close();
-                        if (data) {
+                        if (data.success) {
                             if (data0.length > 0) {
                                 fjs0.removeRecords({ ScheduleID: id });
                             }
@@ -613,7 +614,10 @@ else
                             }
                         }
                         else {
-
+                            if (data.block) {
+                                window.VerifyLoginRedirctToHome(data.success);
+                                return;
+                            }
                         }
                     }).fail(function (jqXHR, textStatus, errorThrown) {
                     }).always(function () {
