--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
@@ -396,7 +396,7 @@ else
             <td class="c-cardTable__footer" data-card-table-width="1/1">
                 <div class="c-cardTable__content">
                     <% if (Start) { %>
-                        <a href="@(Model.ConsultScheduleLink)?id=<%= ScheduleID %>&type=Employee" class="o-tableBtn o-tableBtn--card@lt o-tableBtn--consult">開始諮詢</a>
+                        <a href="@(Model.ConsultScheduleLink)?id=<%= ScheduleID %>&type=Employee" class="o-tableBtn o-tableBtn--card@lt o-tableBtn--consult" target="_blank">開始諮詢</a>
                     <% } else { %>
                         <a href="" class="o-tableBtn o-tableBtn--card@lt o-tableBtn--consult is-disabled">等待中</a>
                     <% } %>
