--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
@@ -621,8 +621,6 @@ else
                     });
                 });
             }
-
-            bindClickEvent();
     
             moment.locale('zh-tw', {
                 weekdaysMin: dayNamesZh,
@@ -939,7 +937,11 @@ else
                 // 開始諮詢的該筆資料
                 let id = $(this).data('eventId');
                 let data = dataSource.find(item => item.id === id);
-            });
+
+                 window.open('@(Model.ConsultScheduleLink)?id='+id+'&type=Employee');
+            });            
+
+            bindClickEvent();
         });
     </script>
 }
