--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
@@ -605,8 +605,6 @@ else
                 });
             }
 
-            bindClickEvent();
-
             moment.locale('zh-tw', {
                 weekdaysMin: dayNamesZh,
                 meridiemParse: /凌晨|早上|上午|中午|下午|晚上/,
@@ -872,7 +870,7 @@ else
                 var footerBtnSuccess = `
                         <div class="l-action l-action--inline" data-footer-tmpl="success">
                             <div class="l-action__item">
-                                <a href="#" class="o-btn o-btn--secondary o-btn--sm" data-event-id="{id}" data-quick-close data-cancel>取消預約</a>
+                                <a href="#" class="o-btn o-btn--secondary o-btn--sm" data-event-id="{id}" data-id="{id}" data-quick-close data-cancel>取消預約</a>
                             </div>
                             <div class="l-action__item">
                                 <a href="#" class="o-btn o-btn--primary o-btn--sm {isDisabled}" data-event-id="{id}" data-start-btn>{starBtnText}</a>
@@ -881,7 +879,7 @@ else
                 var footerBtnReserving = `
                         <div class="l-action l-action--inline" data-footer-tmpl="reserving">
                             <div class="l-action__item">
-                                <a href="#" class="o-btn o-btn--secondary o-btn--sm" data-event-id="{id}" data-quick-close data-cancel>取消預約</a>
+                                <a href="#" class="o-btn o-btn--secondary o-btn--sm" data-event-id="{id}" data-id="{id}" data-quick-close data-cancel>取消預約</a>
                             </div>
                         </div>`;
                 var $footerWrapper = `
@@ -922,7 +920,9 @@ else
                 // 開始諮詢的該筆資料
                 let id = $(this).data('eventId');
                 let data = dataSource.find(item => item.id === id);
-            });
+            });            
+
+            bindClickEvent();
         });
     </script>
 }
